footer font correction and gap fixed done

--- a/style/style.css
+++ b/style/style.css
@@ -237,6 +237,7 @@ footer>div{
 }
 .footer-menu>ul li a{
     color: var(--menu-color);
+    font-family: "Inter", sans-serif;
     font-size: 16px;
     font-weight: 400;
     line-height: 24px;
